contact berubah jadi kontak

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
           <div class="container">
             <div class="row pt-4">
                 <div class="col text-center">
-                    <h3>Contact</h3>
+                    <h3>Kontak</h3>
                     <hr class="my-3 bg-danger" style="width: 15%;">
                 </div>
             </div>
